feat: Added chatbot in FE and the need services in the BE
