# pkm_frontend/libs/api/model/models.ts
@@ -1,2 +1,5 @@
+export * from './aIRequest';
+export * from './chatWithAI200Response';
+export * from './chatWithAIRequest';
 export * from './folder';
 export * from './note';
